@@ -4611,7 +4611,7 @@ print_debug_frame_section (Dwfl_Module *dwflmod, Ebl *ebl, GElf_Ehdr *ehdr,
 
       if (unlikely (unit_length == 0))
 	{
-	  printf (gettext ("\n [%6jx] Zero terminator\n"), offset);
+	  printf (gettext ("\n [%6tx] Zero terminator\n"), offset);
 	  continue;
 	}
 
@@ -4658,7 +4658,7 @@ print_debug_frame_section (Dwfl_Module *dwflmod, Ebl *ebl, GElf_Ehdr *ehdr,
 	    // XXX Check overflow
 	    get_uleb128 (return_address_register, readp);
 
-	  printf ("\n [%6jx] CIE length=%" PRIu64 "\n"
+	  printf ("\n [%6tx] CIE length=%" PRIu64 "\n"
 		  "   CIE_id:                   %" PRIu64 "\n"
 		  "   version:                  %u\n"
 		  "   augmentation:             \"%s\"\n"
@@ -4796,7 +4796,7 @@ print_debug_frame_section (Dwfl_Module *dwflmod, Ebl *ebl, GElf_Ehdr *ehdr,
 	  Dwarf_Word address_range
 	    = read_ubyte_unaligned_inc (ptr_size, dbg, readp);
 
-	  printf ("\n [%6jx] FDE length=%" PRIu64 " cie=[%6jx]\n"
+	  printf ("\n [%6tx] FDE length=%" PRIu64 " cie=[%6tx]\n"
 		  "   CIE_pointer:              %" PRIu64 "\n"
 		  "   initial_location:         %#" PRIx64,
 		  offset, (uint64_t) unit_length,
